packages/next-swc/crates/styled_jsx/tests/errors/two-children/output.js
import _JSXStyle from "next/dist/shared/lib/styled-jsx/style";
export default (()=><div >

    <style jsx>

      {`.p {}`}

      {`.p {}`}

    </style>

  </div>);
